[gd_scene load_steps=4 format=3 uid="uid://b5fqa211vkgwv"]

[ext_resource type="Script" path="res://Player/player_bullet.gd" id="1_dc0vh"]
[ext_resource type="Texture2D" uid="uid://dsmfmmerouxwf" path="res://Player/BulletSprite.png" id="1_h4hgq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_juhbm"]
radius = 2.0
height = 8.0

[node name="player_bullet" type="RigidBody2D"]
rotation = 1.5708
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource("1_dc0vh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.000106812, -0.0197906)
rotation = 3.14159
scale = Vector2(0.00936199, 0.00918387)
texture = ExtResource("1_h4hgq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_juhbm")

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_kill_timer_timeout"]
